--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "mtc-bridge",
-  "version": "1.2.0",
+  "version": "2.1.0",
   "description": "MetaCoin Birgde",
   "main": "mtcbridge.js",
   "dependencies": {
-    "body-parser": "1.18.3",
-    "crc": "3.8.0",
-    "ec-key": "0.0.2",
-    "express": "4.16.3",
-    "fabric-ca-client": "1.2.2",
-    "fabric-client": "1.2.2",
-    "grpc": "1.15.1",
-    "ioredis": "4.11.1",
+    "body-parser": "^1.18.3",
+    "crc": "^3.8.0",
+    "ec-key": "^0.0.2",
+    "express": "^4.16.3",
+    "fabric-ca-client": "^2.2.3",
+    "fabric-client": "^1.4.13",
+    "grpc": "^1.15.1",
+    "ioredis": "^4.11.1",
     "md5": "^2.2.1",
-    "multer": "1.3.1",
-    "promise": "8.0.3"
+    "multer": "^1.3.1",
+    "promise": "^8.0.3"
   },
   "license": "MIT",
   "repository": {
